# MATU

./: .dockerignore  .env.example  .gitignore  CITATION.cff  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  analyze_uncertainty_amount.py  camel_math.py  cp2.py  eigv.slurm  environment.yml  evaluation.py  inter_unq.py  matu-44038.err  orijinal_400_soru.txt  pyproject.toml  requirements.txt  resume_3b_base.slurm  resume_3b_evolved.slurm  run_eigv_analysis.py  run_gen_14b_base.slurm  run_gen_14b_evolved.slurm  run_gen_3b_base.slurm  run_gen_3b_base_assistant_only.slurm  run_gen_3b_base_cleaned.slurm  run_gen_3b_base_cleaned_4b.slurm  run_gen_3b_base_cleaned_assistant.slurm  run_gen_3b_base_embedding.slurm  run_gen_3b_base_rank30.slurm  run_gen_3b_base_time_exp.slurm  run_gen_3b_base_user_only.slurm  run_gen_3b_evolved.slurm  run_gen_3b_evolved_assistant_only.slurm  run_gen_3b_evolved_cleaned.slurm  run_gen_3b_evolved_cleaned_4b.slurm  run_gen_3b_evolved_cleaned_assistant.slurm  run_gen_3b_evolved_embedding.slurm  (+9 more)
baselines/: __init__.py  eigv.py
configs/: default.yaml
data/: LOG_FORMAT.md  README.md
docs/: architecture.md
examples/: generate_logs_camel_gpt.py  generate_logs_hf_qwen.py
matu/: __init__.py  cli.py  config.py  constants.py  cp2_matu.py  embed_logs.py  env.py  evaluate_uncertainty.py  fit_to_uncertainty.py  remove_stopwords_llm.py
matu_uq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
quick_start/: .env  .env.example  .gitignore  README.md
results/: 3b_results_majority_correct.txt  gen_14b_base-44189.err  gen_14b_base-44189.out  gen_14b_evolved-44188.err  gen_14b_evolved-44188.out  gen_3b_base-44131.err  gen_3b_base-44131.out  gen_3b_base-44145.err  (+27 more)
(+12525 files in other folders)
