[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matu-uq"
version = "0.1.0"
description = "Multi-Agent Tensor Uncertainty for LLM-based multi-agent systems"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Tiejin Chen" },
  { name = "Huaiyuan Yao" },
  { name = "Jia Chen" },
  { name = "Evangelos E. Papalexakis" },
  { name = "Hua Wei" },
]
keywords = ["uncertainty", "multi-agent systems", "large language models", "tensor decomposition"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.24",
  "tqdm>=4.66",
  "tensorly>=0.8",
  "sentence-transformers>=2.6",
  "transformers>=4.40",
  "torch>=2.1",
  "scikit-learn>=1.3",
  "datasets>=2.18",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
examples = [
  "openai>=1.0",
  "camel-ai>=0.2.0",
]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "twine>=5.0",
]

[project.scripts]
matu = "matu.cli:main"
matu-uq = "matu.cli:main"

[project.urls]
Homepage = "https://github.com/tiejin98/MATU"
Repository = "https://github.com/tiejin98/MATU"
Issues = "https://github.com/tiejin98/MATU/issues"

[tool.setuptools]
packages = ["matu", "baselines"]

[tool.pytest.ini_options]
testpaths = ["tests"]
